# betterpicker

./: .clang-format  CMakeLists.txt  LICENSE  README.md  about.md  changelog.md  mod.json
include/: Color.hpp  TouchArea.hpp
rustlib/: Cargo.toml
rustlib/src/: lib.rs
src/: Color.cpp  TouchArea.cpp  main.cpp
